--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="#sobremi">SOBRE MI</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
-            <li id="logo"><img src="/imagenes/cascos.png" alt="Logo del portfolio"></li>
+            <li id="logo"><img src="./imagenes/cascos.png" alt="Logo del portfolio"></li>
             <li><a href="#experiencia">SKILLS</a></li>
             <li><a href="#contactar">CONTACTAR</a></li>
         </ul>
